# atlas-connectors

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-dev.yml
src/atlas_connectors/: __init__.py  settings.py  simulator.py
src/atlas_connectors/adapters/: __init__.py
src/atlas_connectors/adapters/camt053/: __init__.py  parser.py
src/atlas_connectors/adapters/psd2_bridge/: __init__.py  client.py
src/atlas_connectors/kernel/: __init__.py  base.py  http_push.py  provenance.py  publisher.py  retry.py  runner.py
src/atlas_connectors/sim_service/: __init__.py  api.py  emitter.py  main.py  models.py  settings.py
src/atlas_connectors/sim_service/generators/: __init__.py  base.py  connect_firewall.py  connect_ingestion.py  finhub_anomaly.py  finhub_circuit_breaker.py  finhub_consolidation.py  finhub_forecasting.py  finhub_reconciliation.py
tests/: test_camt053_parser.py  test_http_push.py  test_provenance.py  test_sim_determinism.py  test_sim_generators.py  test_sim_service_api.py  test_simulator.py
