[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-connectors"
version = "0.1.0"
description = "Atlas ingestion adapters — read-only extraction with provenance (source_hash), publishing to the canonical event bus"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev-gcp = [
    "google-cloud-pubsub>=2.21",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
atlas-simulate = "atlas_connectors.simulator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_connectors"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
